@@ -1,72 +1,90 @@
 package ru.practicum.shareit.user;
 
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import ru.practicum.shareit.exception.DuplicateEmailException;
+import ru.practicum.shareit.exception.UserNotFoundException;
 
 import java.util.List;
-import java.util.Optional;
+import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
+@Transactional(readOnly = true)
 public class UserServiceImpl implements UserService {
+
     private final UserRepository userRepository;
+    private final UserMapper userMapper;
 
     @Override
+    @Transactional
     public UserDto createUser(UserDto userDto) {
-        if (userRepository.findAll().stream()
-                .anyMatch(u -> u.getEmail().equalsIgnoreCase(userDto.getEmail()))) {
-            throw new IllegalArgumentException("Email уже используется");
+        log.info("Создание нового пользователя с email: {}", userDto.getEmail());
+
+        if (userRepository.existsByEmail(userDto.getEmail())) {
+            throw new DuplicateEmailException("Пользователь с email " + userDto.getEmail() + " уже существует");
         }
 
-        User user = UserMapper.toUser(userDto);
+        User user = userMapper.toEntity(userDto);
         User savedUser = userRepository.save(user);
-        return UserMapper.toUserDto(savedUser);
+
+        log.info("Пользователь создан с id: {}", savedUser.getId());
+        return userMapper.toDto(savedUser);
+    }
+
+    @Override
+    @Transactional
+    public UserDto updateUser(Long userId, UserDto userDto) {
+        log.info("Обновление пользователя с id: {}", userId);
+
+        User user = userRepository.findById(userId)
+                .orElseThrow(() -> new UserNotFoundException("Пользователь с id " + userId + " не найден"));
+
+        if (userDto.getEmail() != null &&
+                !userDto.getEmail().equals(user.getEmail()) &&
+                userRepository.existsByEmailAndIdNot(userDto.getEmail(), userId)) {
+            throw new DuplicateEmailException("Email " + userDto.getEmail() + " уже используется");
+        }
+
+        userMapper.updateEntity(userDto, user);
+        User updatedUser = userRepository.save(user);
+
+        log.info("Пользователь с id: {} обновлен", userId);
+        return userMapper.toDto(updatedUser);
     }
 
     @Override
     public UserDto getUserById(Long userId) {
+        log.info("Получение пользователя с id: {}", userId);
+
         User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Пользователь не найден"));
-        return UserMapper.toUserDto(user);
+                .orElseThrow(() -> new UserNotFoundException("Пользователь с id " + userId + " не найден"));
+
+        return userMapper.toDto(user);
     }
 
     @Override
     public List<UserDto> getAllUsers() {
+        log.info("Получение всех пользователей");
+
         return userRepository.findAll().stream()
-                .map(UserMapper::toUserDto)
-                .toList();
+                .map(userMapper::toDto)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public UserDto updateUser(Long userId, UserDto userDto) {
-        // 1. Находим пользователя
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Пользователь не найден"));
-
-        // 2. ОБНОВЛЯЕМ ИМЯ - если оно передано в запросе
-        if (userDto.getName() != null) {
-            user.setName(userDto.getName());
-        }
-
-        if (userDto.getEmail() != null) {
-            if (!userDto.getEmail().equalsIgnoreCase(user.getEmail())) {
-                Optional<User> existingUser = userRepository.findByEmail(userDto.getEmail());
-                if (existingUser.isPresent() && !existingUser.get().getId().equals(userId)) {
-                    throw new IllegalArgumentException("Email уже используется");
-                }
-            }
-            user.setEmail(userDto.getEmail());
-        }
-
-        User updatedUser = userRepository.save(user);
-
-        return UserMapper.toUserDto(updatedUser);
-    }
-
-    @Override
+    @Transactional
     public void deleteUser(Long userId) {
-        User user = userRepository.findById(userId)
-                .orElseThrow(() -> new UserNotFoundException("Пользователь не найден"));
+        log.info("Удаление пользователя с id: {}", userId);
+
+        if (!userRepository.existsById(userId)) {
+            throw new UserNotFoundException("Пользователь с id " + userId + " не найден");
+        }
+
         userRepository.deleteById(userId);
+        log.info("Пользователь с id: {} удален", userId);
     }
 }
